[package]
name = "keystore_cracker"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "*"
rand = "*"
anyhow = "*"
tokio = { version = "*" , features = ["full"]}
dotenv = "*"
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
eth-keystore = "*"
num_cpus = "*"